[package]
name = "youtube_archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
colored = "2.1.0"
clap = { version = "4.5.7", features = ["derive"] }